preparing views and basic routes for express.js

--- a/views/filmler.html
+++ b/views/filmler.html
@@ -10,13 +10,13 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="stylesheet" href="assets/css/responsive.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/responsive.css" />
 	</head>
 	<body>
 		<!-- NAVBAR -->
 		<div class="navbar">
-			<div class="logo">Sinema</div>
+			<div class="logo">Sinema" </div>
 			<div class="nav-links">
 				<ul>
 					<a href="index.html"><li>Anasayfa</li></a>
@@ -35,7 +35,7 @@
 		<section class="allMovies container">
 			<div class="allMovieBox">
 				<div class="movieImg">
-					<img src="assets/img/movie1.jpeg" alt="" />
+					<img src="img/movie1.jpeg" alt="" />
 				</div>
 				<div class="movieInfo">
 					<div class="AllMovieTitle">Cover</div>
@@ -59,7 +59,7 @@
 
 			<div class="allMovieBox">
 				<div class="movieImg">
-					<img src="assets/img/movie.jpeg" alt="" />
+					<img src="img/movie.jpeg" alt="" />
 				</div>
 				<div class="movieInfo">
 					<div class="AllMovieTitle">Mr. Robot</div>
@@ -82,7 +82,7 @@
 
 			<div class="allMovieBox">
 				<div class="movieImg">
-					<img src="assets/img/movie2.jpeg" alt="" />
+					<img src="img/movie2.jpeg" alt="" />
 				</div>
 				<div class="movieInfo">
 					<div class="AllMovieTitle">Nobody</div>
