--- a/views/hakkimizda.html
+++ b/views/hakkimizda.html
@@ -10,8 +10,8 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="stylesheet" href="assets/css/responsive.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/responsive.css" />
 	</head>
 	<body>
 		<!-- NAVBAR -->
@@ -34,7 +34,7 @@
 
 		<section class="aboutus container">
 			<div class="aboutTitle">
-				<img src="/assets/img/logo.png" alt="" style="margin: auto" />
+				<img src="/img/logo.png" alt="" style="margin: auto" />
 				<p>
 					Yılların verdiği tecrübe ile Türkiye’nin her yerinde her türlü Açık Hava Sinema, Gezici Sinema,
 					Davet, Açılış, Konser, Festival, Şenlik, Fuar, Organizasyonlarında sınırsız hizmet ve memnuniyet
