--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="stylesheet" href="assets/css/responsive.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/responsive.css" />
 	</head>
 	<body>
 		<!-- NAVBAR -->
@@ -39,7 +39,7 @@
 					</h2>
 				</div>
 				<div class="right">
-					<img width="350" src="assets/img/homeimg.svg" alt="" />
+					<img width="350" src="img/homeimg.svg" alt="" />
 				</div>
 			</div>
 		</section>
@@ -51,19 +51,19 @@
 
 		<section class="movies">
 			<div class="container movieContainer">
-				<div style="background-image: url('assets/img/movie1.jpeg')" class="movie">
+				<div style="background-image: url('img/movie1.jpeg')" class="movie">
 					<div class="movieTitle">Film İsmi</div>
 					<div class="hiddenMovieTime">
 						<b>21:00</b>
 					</div>
 				</div>
-				<div style="background-image: url('assets/img/movie3.jpeg')" class="movie">
+				<div style="background-image: url('img/movie3.jpeg')" class="movie">
 					<div class="movieTitle">Film İsmi</div>
 					<div class="hiddenMovieTime">
 						<b>21:00</b>
 					</div>
 				</div>
-				<div style="background-image: url('assets/img/movie2.jpeg')" class="movie">
+				<div style="background-image: url('img/movie2.jpeg')" class="movie">
 					<div class="movieTitle">Film İsmi</div>
 					<div class="hiddenMovieTime">
 						<b>21:00</b>
