List the movies on the homepage.

--- a/views/back/addmovie.handlebars
+++ b/views/back/addmovie.handlebars
@@ -8,6 +8,7 @@
             <input name="image" type="text" placeholder="Resim Linki">
             <input name="time" type="text" placeholder="Vizyon Saati">
             <input name="description" type="textarea" placeholder="Film Açıklaması">
+            <input name="image" type="file">
             <button type="submit">Film Ekle</button>
             <a href="/admin">Geri</a>
         </div>
