Integrate express-fileupload package

--- a/views/back/addmovie.handlebars
+++ b/views/back/addmovie.handlebars
@@ -2,7 +2,7 @@
 
     <div class="addMoviePanel">
         <h2>Film Ekle</h2>
-        <form method="post"action="/admin/movies/add/process">
+        <form method="post"action="/admin/movies/add/process" enctype="multipart/form-data">
         <div class="form-input">
             <input name="title" type="text" placeholder="Film Adı">
             <input name="image" type="text" placeholder="Resim Linki">
