Make basis file upload for Movie images

--- a/views/back/addmovie.handlebars
+++ b/views/back/addmovie.handlebars
@@ -5,10 +5,9 @@
         <form method="post"action="/admin/movies/add/process" enctype="multipart/form-data">
         <div class="form-input">
             <input name="title" type="text" placeholder="Film Adı">
-            <input name="image" type="text" placeholder="Resim Linki">
             <input name="time" type="text" placeholder="Vizyon Saati">
             <input name="description" type="textarea" placeholder="Film Açıklaması">
-            <input name="image" type="file">
+            <input style="color: white;" name="image" type="file">
             <button type="submit">Film Ekle</button>
             <a href="/admin">Geri</a>
         </div>
