--- a/views/front/index.handlebars
+++ b/views/front/index.handlebars
@@ -24,7 +24,7 @@
 		<section class="movies">
 			<div class="container movieContainer">
 				{{#each movies}}
-				<div style="background-image: url('img/movie1.jpeg')" class="movie">
+				<div style="background-image: url('{{image}}')" class="movie">
 					<div class="movieTitle">{{title}}</div>
 					<div class="hiddenMovieTime">
 						<b>{{time}}</b>
