--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -52,3 +52,30 @@
     border-radius: 5px;
     padding: 12px;
 }
+
+/* Add Admin Page */
+.addAdminPanel{
+    width: 300px;
+    padding: 40px;
+    background-color: rgba(255, 255, 255, 0.307);
+    justify-content: center;
+    margin: 4rem auto auto auto;
+    text-align: center;
+}
+
+.addAdminPanel .form-input input:first-child{
+    margin-top: 5px;
+}
+
+.addAdminPanel .form-input input{
+    width: 200px;
+    margin-bottom: 5px;
+    padding: 10px;
+}
+
+.addAdminPanel .form-input button{
+    background-color: purple;
+    border: 0.4px solid white;
+    border-radius: 5px;
+    padding: 12px;
+}
