Integrate flash messages middleware,Prepare schema of settings,Build admin menus

--- a/views/back/addadmin.handlebars
+++ b/views/back/addadmin.handlebars
@@ -7,7 +7,7 @@
             <input name="username" type="text" placeholder="Kullanıcı adı">
             <input name="password" type="password" placeholder="Şifre">
             <button type="submit">Admin Ekle</button>
-            <a href="/admin">Geri</a>
+            <a href="/admin/panel/">Geri</a>
         </div>
 
         </form>
