--- a/views/back/addmovie.handlebars
+++ b/views/back/addmovie.handlebars
@@ -9,7 +9,7 @@
             <input name="description" type="textarea" placeholder="Film Açıklaması">
             <input style="color: white;" name="image" type="file">
             <button type="submit">Film Ekle</button>
-            <a href="/admin">Geri</a>
+            <a href="/admin/panel/">Geri</a>
         </div>
 
         </form>
