--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -79,3 +79,29 @@
     border-radius: 5px;
     padding: 12px;
 }
+
+/* Panel page */
+
+.panelMenus{
+    margin-top: 100px;
+    text-align: center;
+    justify-content: center;
+}
+
+.panelMenus div{
+    margin: 1rem auto auto auto;
+    width: 300px;
+    color: black;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.675);
+    font-weight: bold;
+}
+
+.panelMenus a{
+    color: inherit;
+}
+
+.panelMenus .logout{
+    background-color: red;
+    color: white;
+}
