--- a/views/back/panel.handlebars
+++ b/views/back/panel.handlebars
@@ -10,6 +10,8 @@
         <div><a href="../movies/add">Film Ekle</a></div>
         <div><a href="../campaigns/add">Kampanya Ekle</a></div>
         <div><a href="../admins/add">Admin Ekle</a></div>
+        <div><a href="../contacts">Mesajlar</a></div>
+        <div><a href="../settings/edit">Ayarlar</a></div>
         <div class="logout"><a href="../logout">Çıkış Yap</a></div>
     </div>
     
