--- a/views/front/filmler.handlebars
+++ b/views/front/filmler.handlebars
@@ -5,75 +5,20 @@
 		</div>
 
 		<section class="allMovies container">
+			{{#each movies}}
 			<div class="allMovieBox">
 				<div class="movieImg">
-					<img src="img/movie1.jpeg" alt="" />
+					<img src="{{image}}" alt="" />
 				</div>
 				<div class="movieInfo">
-					<div class="AllMovieTitle">Cover</div>
+					<div class="AllMovieTitle">{{title}}</div>
 					<div class="AllMovieDesc">
-						Yönetmen Bill Duke'ün bu psikolojik dramasında suçlanan bir kadın ya bir katil ya da kurban
-						olabilir. Valerie Mass, Tanrı'dan korkan bir ev kadını ve bir gün kendini asla hayal etmediği bir
-						durumda bulan bir sanatçıdır - bu davayı kapatmaya hevesli bir bölge savcısı olan saçma sapan
-						polis dedektifi Hicks ve Simmons tarafından cinayet suçlamasıyla sorgulanır. Cover, Bill Duke
-						tarafından üretilen ve yönetilen ve Aunjanue Ellis, Razaaq Adoti, Vivica A. Fox ve Leon'un
-						oynadığı bir drama gerilim filmi. 22 Şubat 2008'de seçkin sinemalarda gösterime girdi. H.I.V.'yi
-						geçen evli erkeklerdir. erkek veya kadın partnerlerine. Erkeklerin çoğu evlilik yemininin arkasına
-						saklanıyor ama yine de erkekleri arzuluyor. Kadınlar biliyor ama abartılı yaşam tarzına
-						alışmışlar. Yılbaşı arifesinde biri öldürüldüğünde, baş şüpheli Valerie Maas, kiliseye giden bir
-						ev hanımıdır ve uzun yıllardır kocasının çifte bir hayat sürdüğünü keşfedince hayatı alt üst olur.
-						Karakterinin ve inancının gücü, kocasının ihanetinin açığa çıkması, bildikleri her şeyi yok
-						etmekle tehdit ederken, devam etmesini sağlar.
-						<a href="iletisim.html"><div class="buyTicket">Satın Al</div></a>
+						{{description}}
+						<a href="/iletisim"><div class="buyTicket">Satın Al</div></a>
 					</div>
 				</div>
 			</div>
+			{{/each}}
 
-			<div class="allMovieBox">
-				<div class="movieImg">
-					<img src="img/movie.jpeg" alt="" />
-				</div>
-				<div class="movieInfo">
-					<div class="AllMovieTitle">Mr. Robot</div>
-					<div class="AllMovieDesc">
-						Mr. Robot, Sam Esmail tarafından kaleme alınmış Amerikan psikolojik gerilim-dram televizyon
-						dizisi. Dizinin baş karakteri Elliot Alderson (Rami Malek), sosyal anksiyete bozukluğu, çoklu
-						kişilik bozukluğu, klinik depresyon, şizofreni ve uyuşturucu bağımlılığı ile boğuşan bir siber
-						güvenlik uzmanı ve hacker'dır. Elliot, "Mr. Robot" (Christian Slater) lakabıyla tanınan bir
-						anarşist tarafından "fsociety" adlı hacktivist gruba katılmaya davet edilir. Grubun amacı,
-						dünyanın en büyük şirketler topluluğu olana E Corp'un finansal verilerini şifreleyerek tüm borç
-						kayıtlarını yok etmektir. Dizinin ilk bölümü 27 Mayıs 2015'te VoD servisleri üzerinden yayımlandı.
-						Dizi, 24 Haziran 2015'te USA Network'te kanalında yayımlanmaya başlandı. İkinci sezon 13 Temmuz
-						2016'da, üçüncü sezon 11 Ekim 2017'de yayımlanmaya başlandı. Dizinin 13 bölümden oluşan dördüncü
-						ve son sezonu 6 Ekim 2019'da yayımlanmaya başlandı.
-
-						<a href="iletisim.html"><div class="buyTicket">Satın Al</div></a>
-					</div>
-				</div>
-			</div>
-
-			<div class="allMovieBox">
-				<div class="movieImg">
-					<img src="img/movie2.jpeg" alt="" />
-				</div>
-				<div class="movieInfo">
-					<div class="AllMovieTitle">Nobody</div>
-					<div class="AllMovieDesc">
-						Önemsiz Biri, Ilya Naishuller tarafından yönetilen ve Derek Kolstad tarafından yazılan yeni bir
-						Amerikan aksiyon gerilim filmidir. Filmde Bob Odenkirk, Connie Nielsen, RZA, Aleksei Serebryakov
-						ve Christopher Lloyd rol alıyor. İlk olarak Universal Pictures tarafından 14 Ağustos 2020'de
-						yayınlanması planlanan filmin genel gösterimi, COVID-19 salgını nedeniyle 26 Şubat 2021'e
-						ertelendi .[1][2] Hutch Mansell, karısı Becca ve oğlu Blake ile banliyöde yaşayan bir adamdır.
-						Ailenin sıradan yaşamı bir gece iki hırsızın evlerine girmesiyle alt üst olur. Hutch daha büyük
-						bir şiddetin yaşanmasını önlemek için hırsızlara karşı tepkisiz kalır. Ancak onun ailesini
-						savunmaması oğlu ve karısının kendisinden uzaklaşmasına neden olur. Yaşanan bu olay, Hutch’ın
-						yıllardır içinde bastırdığı bazı duyguların harekete geçmesine neden olur. Yumruk, silah sesleri
-						olan bir dünyaya dahil olan Hutch, bir daha önemsiz biri gibi hafife alınmayacağından emin olmaya
-						çalışır.
-
-						<a href="iletisim.html"><div class="buyTicket">Satın Al</div></a>
-					</div>
-				</div>
-			</div>
 		</section>
 
