--- a/views/front/iletisim.handlebars
+++ b/views/front/iletisim.handlebars
@@ -4,14 +4,15 @@
 		</div>
 
 		<div class="contactform container">
+			{{#each siteSettings}}
 			<div class="contactLeft">
 				<h2>İletişim</h2>
 				<p>Bize 7 gün ve 24 saat ulaşabilirsiniz.</p>
-				<b>Telefon Numaramız:</b> 0551 688 0000 <br />
-				<b>Adres: </b> Pirimehmet Mah. 1734. Sok. Özdoğancılar C 5/7 Isparta/Merkez
+				<b>Telefon Numaramız:</b> {{phone}} <br />
+				<b>Adres: </b> {{address}}
 				<div class="map">
 					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12613.443844061327!2d30.5441272!3d37.7815797!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x94303028cd3c285a!2sCinema%20Pink!5e0!3m2!1str!2str!4v1655357774287!5m2!1str!2str"
+						src="{{iframesrc}}"
 						width="500"
 						height="300"
 						style="border: 0"
@@ -23,14 +24,18 @@
 			</div>
 			<div class="contactRight">
 				<h3>Bize Yazın</h3>
+				<form method="post" action="/iletisim/process">
 				<div class="inputList">
 					Adınız Soyadınız:
-					<input placeholder="Tolga U" class="contactinput" type="text" />
+					<input name="namesurname" placeholder="Tolga U" class="contactinput" type="text" />
 					Telefon Numaranız:
-					<input placeholder="0551 000 0000" class="contactinput" type="text" />
+					<input name="phone" placeholder="0551 000 0000" class="contactinput" type="text" />
 					Mesajınız:
-					<textarea class="contactinput" name="" id="" cols="30" rows="5"> </textarea>
+					<textarea name="message" class="contactinput" name="" id="" cols="30" rows="5"> </textarea>
 					<button class="contactButton" type="submit">Gönder</button>
 				</div>
+				</form>
 			</div>
 		</div>
+
+		{{/each}}
