--- a/views/partials/front/footer.handlebars
+++ b/views/partials/front/footer.handlebars
@@ -1,11 +1,15 @@
 		<!-- Footer -->
+		{{#each siteSettings}}
+
 		<section class="footer container">
 			Tüm hakları saklıdır.
 			<div class="socials">
-				<a href="#" class="fa fa-facebook"></a>
-				<a href="#" class="fa fa-twitter"></a>
-				<a href="#" class="fa fa-instagram"></a>
+				<a href="{{fb}}" class="fa fa-facebook"></a>
+				<a href="{{tw}}" class="fa fa-twitter"></a>
+				<a href="{{ig}}" class="fa fa-instagram"></a>
 			</div>
 		</section>
 	</body>
 </html>
+
+{{/each}}
