--- a/views/back/contacts.handlebars
+++ b/views/back/contacts.handlebars
@@ -10,6 +10,8 @@
         </div>
         <hr>
         {{/each}}
+                    <a href="/admin/panel/">Geri</a>
+
     </div>
     
 </body>
